--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/js" href="index.js">
 </head>
 <body>
-    <div class="teclado" style="background-color: black;"> 
+    <div class="teclado" style="background-color: black; width: 1500px;"> 
         <div class="linha" style="width: 1500px;height: 100px;background-color: black;margin-bottom: 20px;display: flex;flex-direction: row;">
             <div class="tecla" style="width: 100px;height: 100px;margin-left: 6.7px;background-color: green; font-size: 40px;align-items: center; justify-items:  center; align-content: center; justify-content: center; display: flex; ">ESC</div>    
         </div>
@@ -94,6 +94,7 @@
 
 
     </div>
+</div>
 </body>
 
 <script>
